--- a/Gateway.WebApi/appsettings.json
+++ b/Gateway.WebApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Jwt": {
+    "SecretKey": "VaibhavBhapkar",
+    "Issuer": "https//localhost:44377/",
+    "Audience": "https//localhost:44377/"
+  },
   "AllowedHosts": "*"
 }
