--- a/Getawey.WebApi/appsettings.json
+++ b/Getawey.WebApi/appsettings.json
@@ -6,10 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
+
   "Jwt": {
-    "SecretKey": "VaibhavBhapkar",
-    "Issuer": "https//localhost:44377/",
-    "Audience": "https//localhost:44377/"
-  },
-  "AllowedHosts": "*"
+    "Key": "AshProgHelpSecretKey",
+    "Issuer":  "Administrador"
+  }
 }
