--- a/Getawey.WebApi/Getawey.WebApi.csproj
+++ b/Getawey.WebApi/Getawey.WebApi.csproj
@@ -11,5 +11,7 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
